new api key working

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -20,7 +20,7 @@
       <a id="logo-container" href="#" class="brand-logo">Logo</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="{% url 'home' %}">Home</a></li>
-        <li><a href="#">Add Recipe</a></li>
+        <li><a href="">Add Recipe</a></li>
         <li><a href="{% url 'about' %}">About</a></li>
       </ul>
 
