--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -1,14 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>Home</h1>
+  <h1>Welcome to My Recipe Planner</h1>
   
   <h2>Weeks</h2>
   <ul>
     {% for week in weeks %}
-      <li><a href="{% url 'week_detail' week.pk %}">{{ week.name }}</a></li>
+      <li>
+        <a href="{% url 'week_detail' week.pk %}">{{ week.name }}</a>
+      </li>
     {% empty %}
       <li>No weeks available</li>
     {% endfor %}
   </ul>
+  
 {% endblock %}
