--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,14 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>Home</h1>
+  <h1>PILAS</h1>
+
+  <p>Lets get together, together</p>
   
-  <h2>Weeks</h2>
-  <ul>
-    {% for week in weeks %}
-      <li><a href="{% url 'week_detail' week.pk %}">{{ week.name }}</a></li>
-    {% empty %}
-      <li>No weeks available</li>
-    {% endfor %}
+
   </ul>
 {% endblock %}
