--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>PILAS</h1>
+  <h1 class="home-page-name">PILAS</h1>
 
-  <p>Lets get together, together</p>
+  <p class="home-page-message" >Lets get together, together</p>
   
 
   </ul>
