--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -168,3 +168,19 @@ a {
   text-align: center;
 
 }
+
+.week-bg-text{
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+  color: white;
+  font-weight: bold;
+  border: 3px solid #f1f1f1;
+  z-index: 2;
+
+  width: 100%;
+  padding: 20px;
+  text-align: center;
+
+}
