--- a/main_app/templates/main_app/day_confirm_delete.html
+++ b/main_app/templates/main_app/day_confirm_delete.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
+<div class="day-bg"></div>
 <h3>Are you sure you want to delete the Day</h3>
 
 <form action="" method="post">
