--- a/main_app/templates/main_app/week_form.html
+++ b/main_app/templates/main_app/week_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
+<div class="week-background"></div>
 {% if object %}
     <h1>Edit Week</h1>
 {% else %}
