finishes css for logo

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -19,7 +19,7 @@
   <nav class="white" role="navigation">
     <div class="nav-wrapper  light-green lighten-3">
       <a id="logo-container" href="{% url 'home' %}" class="brand-logo">
-        <img src="https://i.imgur.com/VUNNYrU.png" alt="Logo" > 
+        PILAS
       </a>
       <ul class="right hide-on-med-and-down">
         <li><a class="waves-effect waves-light btn" href="{% url 'about' %}">About</a></li>
