--- a/main_app/templates/main_app/week_confirm_delete.html
+++ b/main_app/templates/main_app/week_confirm_delete.html
@@ -2,12 +2,12 @@
 
 {% block content %}
 <div class="day-bg"></div>
-<h3>Are you sure you want to delete the Week</h3>
+<h3 class="center-align white-text" >Are you sure you want to delete the Week</h3>
 
 <form action="" method="post">
     {% csrf_token %}
-    <input class="btn red" type="submit" value="Yes - Delete">
-    <a class="btn blue" href="{% url 'week_detail' object.id %}">No - Cancel</a>
+    <input class="btn red " type="submit" value="Yes - Delete">
+    <a class="waves-effect waves-light btn" href="{% url 'week_detail' object.id %}">No - Cancel</a>
 </form>
 
 {% endblock %}
