--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -222,3 +222,23 @@ a {
   z-index: -1;
   
 }
+
+.sign-bg-text{
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+  color: white;
+  font-weight: bold;
+  border: 3px solid #f1f1f1;
+  z-index: 2;
+  height: 85%;
+  width: 60%;
+  padding: 20px;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+}
